# dynoStream

./: CMakeLists.txt  readme.md
inc/: Calibrator.h  DataProcessor.h  Decimator.h
inc/loadCells/: LoadCellDriver.h  SerialLoadCell.h  VirtualLoadCell.h
inc/server/: WSServer.h
src/: Calibrator.cpp  DataProcessor.cpp  Decimator.cpp  main.cpp
src/loadCells/: SerialLoadCell.cpp  VirtualLoadCell.cpp
src/server/: WSServer.cpp
